--- a/assets/css/material-kit.css
+++ b/assets/css/material-kit.css
@@ -60,7 +60,8 @@ section {
 
 body {
   margin: 0;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  /* font-family: "Roboto", "Helvetica", "Arial", sans-serif; */
+  font-family: 'Nunito', sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -481,7 +482,8 @@ section {
 
 body {
   margin: 0;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  /* font-family: "Roboto", "Helvetica", "Arial", sans-serif; */
+  font-family: 'Nunito', sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -5894,7 +5896,8 @@ button.close {
   z-index: 1070;
   display: block;
   margin: 0;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  /* font-family: "Roboto", "Helvetica", "Arial", sans-serif; */
+  font-family: 'Nunito', sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -6019,7 +6022,8 @@ button.close {
   z-index: 1060;
   display: block;
   max-width: 276px;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  /* font-family: "Roboto", "Helvetica", "Arial", sans-serif; */
+  font-family: 'Nunito', sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -15364,7 +15368,8 @@ h6,
 .h2,
 .h3,
 .h4 {
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  /* font-family: "Roboto", "Helvetica", "Arial", sans-serif; */
+  font-family: 'Nunito', sans-serif;
   font-weight: 300;
   line-height: 1.5em;
 }
@@ -15455,7 +15460,8 @@ small,
 .footer-big h4,
 .media .media-heading {
   font-weight: 700;
-  font-family: "Roboto Slab", "Times New Roman", serif;
+  /* font-family: "Roboto Slab", "Times New Roman", serif; */
+  font-family: 'Nunito', sans-serif;
 }
 
 .title,
