--- a/assets/css/material-kit.css
+++ b/assets/css/material-kit.css
@@ -18264,6 +18264,7 @@ footer .pull-center {
   font-size: 4.2rem;
   font-weight: 600;
   display: inline-block;
+  font-family: 'Quicksand', sans-serif;
   position: relative;
 }
 
@@ -18271,6 +18272,7 @@ footer .pull-center {
   font-size: 1.313rem;
   max-width: 500px;
   margin: 10px auto 0;
+  font-family: 'Quicksand', sans-serif;
 }
 
 .index-page h4.description {
